--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,9 +27,11 @@ jobs:
       run: node build.js
     
     - name: Commit generated roms.json
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@github.com'
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         git add roms.json
         git commit -m "Update roms.json [skip ci]" || echo "No changes to commit"
         git push
