--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -44,4 +44,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: .
-        publish_branch: gh-pages
+        publish_branch: gh-pages,
+        exclude_assets: '.github,package.json,static.js,build.js,rename.js,README.md'
