--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -45,4 +45,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: .
         publish_branch: gh-pages,
-        exclude_assets: '.github,package.json,static.js,build.js,rename.js,README.md'
+        exclude_assets: '.github,package.json,static.js,build.js,rename.js,README.md',
+        force_orphan: true
